--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,6 +1,6 @@
 {
     // The name of the Zed theme to use for the UI.
-    //
+    // Based on Zed 0.184.10 default settings.
     // `mode` is one of:
     // - "system": Use the theme that corresponds to the system's appearance
     // - "light": Use the theme indicated by the "light" field
@@ -38,7 +38,7 @@
         // "calt": false
     },
     // The default font size for text in the editor
-    "buffer_font_size": 15,
+    "buffer_font_size": 18,
     // The weight of the editor font in standard CSS units from 100 to 900.
     "buffer_font_weight": 400,
     // Set the buffer's line height.
@@ -54,7 +54,7 @@
     "buffer_line_height": "comfortable",
     // The name of a font to use for rendering text in the UI
     // You can set this to ".SystemUIFont" to use the system font
-    "ui_font_family": "Zed Plex Sans",
+    "ui_font_family": "Zed Plex Mono",
     // Set the UI's font fallbacks, this will be merged with the platform's
     // default font fallbacks.
     "ui_font_fallbacks": null,
@@ -66,7 +66,7 @@
     // The weight of the UI font in standard CSS units from 100 to 900.
     "ui_font_weight": 400,
     // The default font size for text in the UI
-    "ui_font_size": 16,
+    "ui_font_size": 18,
     // How much to fade out unused code.
     "unnecessary_code_fade": 0.3,
     // Active pane styling settings.
@@ -107,7 +107,7 @@
     // "cmd" and "ctrl") are supported.
     "multi_cursor_modifier": "alt",
     // Whether to enable vim modes and key bindings.
-    "vim_mode": false,
+    "vim_mode": true,
     // Whether to show the informational hover box when moving the mouse
     // over symbols in the editor.
     "hover_popover_enabled": true,
@@ -304,11 +304,11 @@
     // Toolbar related settings
     "toolbar": {
         // Whether to show breadcrumbs.
-        "breadcrumbs": true,
+        "breadcrumbs": false,
         // Whether to show quick action buttons.
-        "quick_actions": true,
+        "quick_actions": false,
         // Whether to show the Selections menu in the editor toolbar
-        "selections_menu": true
+        "selections_menu": false
     },
     // Scrollbar related settings
     "scrollbar": {
@@ -460,7 +460,7 @@
     },
     "project_panel": {
         // Whether to show the project panel button in the status bar
-        "button": true,
+        "button": false,
         // Whether to hide the gitignore entries in the project panel.
         "hide_gitignore": false,
         // Default width of the project panel.
@@ -525,7 +525,7 @@
     },
     "outline_panel": {
         // Whether to show the outline panel button in the status bar
-        "button": true,
+        "button": false,
         // Default width of the outline panel.
         "default_width": 300,
         // Where to dock the outline panel. Can be 'left' or 'right'.
@@ -576,7 +576,7 @@
     },
     "collaboration_panel": {
         // Whether to show the collaboration panel button in the status bar.
-        "button": true,
+        "button": false,
         // Where to dock the collaboration panel. Can be 'left' or 'right'.
         "dock": "left",
         // Default width of the collaboration panel.
@@ -588,7 +588,7 @@
         // or a boolean (interpreted as 'never'/'always').
         "button": "when_in_call",
         // Where to the chat panel. Can be 'left' or 'right'.
-        "dock": "right",
+        "dock": "left",
         // Default width of the chat panel.
         "default_width": 240
     },
@@ -598,7 +598,7 @@
         // Where to show the git panel. Can be 'left' or 'right'.
         "dock": "left",
         // Default width of the git panel.
-        "default_width": 360,
+        "default_width": 440,
         // Style of the git status indicator in the panel.
         //
         // Default: icon
@@ -624,9 +624,9 @@
         // Whether to show the notification panel button in the status bar.
         "button": true,
         // Where to dock the notification panel. Can be 'left' or 'right'.
-        "dock": "right",
+        "dock": "left",
         // Default width of the notification panel.
-        "default_width": 380
+        "default_width": 440
     },
     "assistant": {
         // Version of this setting.
@@ -636,24 +636,24 @@
         // Whether to show the assistant panel button in the status bar.
         "button": true,
         // Where to dock the assistant panel. Can be 'left', 'right' or 'bottom'.
-        "dock": "right",
+        "dock": "left",
         // Default width when the assistant is docked to the left or right.
-        "default_width": 640,
+        "default_width": 440,
         // Default height when the assistant is docked to the bottom.
         "default_height": 320,
         // The default model to use when creating new chats.
         "default_model": {
             // The provider to use.
-            "provider": "zed.dev",
+            "provider": "ollama",
             // The model to use.
-            "model": "claude-3-7-sonnet-latest"
+            "model": ""
         },
         // The model to use when applying edits from the assistant.
         "editor_model": {
             // The provider to use.
-            "provider": "zed.dev",
+            "provider": "ollama",
             // The model to use.
-            "model": "claude-3-7-sonnet-latest"
+            "model": ""
         },
         // When enabled, the agent can run potentially destructive actions without asking for your confirmation.
         "always_allow_tool_actions": false,
@@ -762,12 +762,12 @@
     // Settings related to the editor's tabs
     "tabs": {
         // Show git status colors in the editor tabs.
-        "git_status": false,
+        "git_status": true,
         // Position of the close button on the editor tabs.
         // One of: ["right", "left", "hidden"]
         "close_position": "right",
         // Whether to show the file icon for a tab.
-        "file_icons": false,
+        "file_icons": true,
         // Controls the appearance behavior of the tab's close button.
         //
         // 1. Show it just upon hovering the tab. (default)
@@ -806,9 +806,9 @@
         // This is useful for quickly viewing files without cluttering your workspace.
         "enabled": true,
         // Whether to open tabs in preview mode when selected from the file finder.
-        "enable_preview_from_file_finder": false,
+        "enable_preview_from_file_finder": true,
         // Whether a preview tab gets replaced when code navigation is used to navigate away from the tab.
-        "enable_preview_from_code_navigation": false
+        "enable_preview_from_code_navigation": true
     },
     // Settings related to the file finder.
     "file_finder": {
@@ -872,7 +872,7 @@
     //      "soft_wrap": "preferred_line_length",
     // 4. Soft wrap lines at the preferred line length or the editor width (whichever is smaller).
     //      "soft_wrap": "bounded",
-    "soft_wrap": "none",
+    "soft_wrap": "editor_width",
     // The column at which to soft-wrap lines, for buffers where soft-wrap
     // is enabled.
     "preferred_line_length": 80,
@@ -884,13 +884,13 @@
     // Control what info is collected by Zed.
     "telemetry": {
         // Send debug info like crash reports.
-        "diagnostics": true,
+        "diagnostics": false,
         // Send anonymized usage data like what languages you're using Zed with.
-        "metrics": true
+        "metrics": false
     },
     // Automatically update Zed. This setting may be ignored on Linux if
     // installed through a package manager.
-    "auto_update": true,
+    "auto_update": false,
     // Diagnostics configuration.
     "diagnostics": {
         // Whether to show warnings or not by default.
@@ -898,7 +898,7 @@
         // Settings for inline diagnostics
         "inline": {
             // Whether to show diagnostics inline or not
-            "enabled": false,
+            "enabled": true,
             // The delay in milliseconds to show inline diagnostics after the
             // last diagnostic update.
             "update_debounce_ms": 150,
@@ -1135,7 +1135,7 @@
             //
             // The shell running in the terminal needs to be configured to emit the title.
             // Example: `echo -e "\e]2;New Title\007";`
-            "breadcrumbs": true
+            "breadcrumbs": false
         },
         // Scrollbar-related settings
         "scrollbar": {
@@ -1215,9 +1215,7 @@
     //
     // If you don't want any of these extensions, add this field to your settings
     // and change the value to `false`.
-    "auto_install_extensions": {
-        "html": true
-    },
+    "auto_install_extensions": {},
     // Controls how completions are processed for this language.
     "completions": {
         // Controls how words are completed.
