--- a/zed/settings.json
+++ b/zed/settings.json
@@ -31,7 +31,7 @@ ln -sf ~/Applications/Zed.app/Contents/MacOS/cli ~/.local/bin/zed
   "tab_bar": { "show_nav_history_buttons": false, "show_tab_bar_buttons": false },
 
   "title_bar": { "show_sign_in": false, "show_user_menu": false },
-  "project_panel": { "button": false },
+  "project_panel": { "button": false, "starts_open": false },
   "git_panel": { "button": false },
   "outline_panel": { "button": false },
   "collaboration_panel": { "button": false },
